<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/main_menu_btn"
            style="@style/IconButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/content_description_menu"
            app:icon="@drawable/ic_menu"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/main_settings_btn"
            style="@style/IconButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/content_description_settings"
            app:icon="@drawable/ic_outline_settings"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/main_city_name_tv"
            style="@style/MainTextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Kyiv" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/main_date_tv"
            style="@style/AdditionalWeatherInformationStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/main_city_name_tv"
            tools:text="13 February" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.4" />

        <ImageView
            android:id="@+id/main_weather_image"
            android:layout_width="160dp"
            android:layout_height="200dp"
            android:layout_marginStart="53dp"
            android:contentDescription="@string/content_description_of_vector_image"
            app:layout_constraintBottom_toTopOf="@id/guideline"
            app:layout_constraintStart_toEndOf="@+id/linearLayout4"
            tools:src="@mipmap/clear_cloud_xhdpi" />


        <ImageView
            android:id="@+id/main_weather_condition_icon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/content_description_of_icon"
            app:layout_constraintBottom_toTopOf="@+id/main_temp"
            app:layout_constraintStart_toStartOf="@+id/main_temp"
            tools:src="@drawable/ic_sun" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/main_weather_condition_description"
            style="@style/MainTextViewStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginStart="10dp"
            app:layout_constraintBottom_toBottomOf="@+id/main_weather_condition_icon"
            app:layout_constraintEnd_toStartOf="@+id/main_weather_image"
            app:layout_constraintStart_toEndOf="@+id/main_weather_condition_icon"
            app:layout_constraintTop_toTopOf="@+id/main_weather_condition_icon"
            tools:text="Clear sky" />


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/main_temp"
            style="@style/MainTextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="1dp"
            android:autoSizeMinTextSize="88sp"
            android:autoSizeTextType="uniform"
            android:includeFontPadding="false"
            android:textSize="98sp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
            app:layout_constraintEnd_toStartOf="@id/main_weather_image"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="25\u00b0" />

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/guideline"
            app:layout_constraintEnd_toEndOf="@+id/main_temp"
            app:layout_constraintStart_toStartOf="@+id/main_temp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    style="@style/MainTextViewStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:includeFontPadding="false"
                    android:text="@string/min"
                    android:textSize="12sp" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/main_temp_min_tv"
                    style="@style/MainTextViewStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:includeFontPadding="false"
                    android:textSize="25sp"
                    tools:text="19\u00b0" />

            </LinearLayout>

            <LinearLayout
                style="@style/DividerStyle"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:orientation="vertical">

            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    style="@style/MainTextViewStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:includeFontPadding="false"
                    android:text="@string/average"
                    android:textSize="12sp" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/main_temp_av_tv"
                    style="@style/MainTextViewStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:includeFontPadding="false"
                    android:textSize="25sp"
                    tools:text="22\u00b0" />

            </LinearLayout>

            <LinearLayout
                style="@style/DividerStyle"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:orientation="vertical">

            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    style="@style/MainTextViewStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:includeFontPadding="false"
                    android:text="@string/max"
                    android:textSize="12sp" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/main_temp_max_tv"
                    style="@style/MainTextViewStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:includeFontPadding="false"
                    android:textSize="25sp"
                    tools:text="29\u00b0" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/linearLayout2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline"
            app:layout_constraintVertical_bias="0.25">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal">

                <ImageView
                    style="@style/AdditionalWeatherInformationIconStyle"
                    android:src="@drawable/ic_thermostat" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/main_pressure_tv"
                    style="@style/AdditionalWeatherInformationStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    tools:text="1.5 hPa" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal">

                <ImageView
                    style="@style/AdditionalWeatherInformationIconStyle"
                    android:src="@drawable/ic_water_blob" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/main_humidity_tv"
                    style="@style/AdditionalWeatherInformationStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    tools:text="90%" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    style="@style/AdditionalWeatherInformationIconStyle"
                    android:src="@drawable/ic_wind" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/main_wind_speed_tv"
                    style="@style/AdditionalWeatherInformationStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    tools:text="4 m/s" />

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="@+id/linearLayout3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/linearLayout3"
            app:layout_constraintTop_toTopOf="@+id/linearLayout3">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal">

                <ImageView
                    style="@style/AdditionalWeatherInformationIconStyle"
                    android:src="@drawable/ic_sun_rise" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/main_sunrise_tv"
                    style="@style/AdditionalWeatherInformationStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    tools:text="5:00" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    style="@style/AdditionalWeatherInformationIconStyle"
                    android:src="@drawable/ic_sun_set" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/main_sunset_tv"
                    style="@style/AdditionalWeatherInformationStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    tools:text="18:00" />

            </LinearLayout>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/main_bottom_sheets"
        style="?attr/bottomSheetStyle"
        android:background="@drawable/bg_main_bottom_sheets"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="8dp"
        app:behavior_hideable="false"
        app:behavior_peekHeight="160dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
        android:layout_gravity="end">

        <LinearLayout
            android:id="@+id/main_bottom_sheets_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="16dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_main_bottom_sheets_swipper"
                android:orientation="horizontal"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="4dp"
                android:layout_gravity="center"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/main_hourly_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:overScrollMode="never"
                android:layout_marginBottom="8dp"
                tools:layout_height="80dp"/>

            <LinearLayout
                style="@style/DividerStyle"
                android:layout_width="match_parent"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/main_daily_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:overScrollMode="never"
                tools:layout_height="16dp"/>


        </LinearLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>